--- a/Reinforced.Lattice.CaseStudies.ColumnsOperations/Web.config
+++ b/Reinforced.Lattice.CaseStudies.ColumnsOperations/Web.config
@@ -9,11 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Reinforced.Lattice.CaseStudies.Projections-20170214064440.mdf;Initial Catalog=aspnet-Reinforced.Lattice.CaseStudies.Projections-20170214064440;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Reinforced.Lattice.CaseStudies.ColumnsOperations-20170214064440.mdf;Initial Catalog=aspnet-Reinforced.Lattice.CaseStudies.ColumnsOperations-20170214064440;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
+    <add key="owin:AutomaticAppStartup" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
