--- a/Reinforced.Lattice.CaseStudies.CellsTemplating/Reinforced.Lattice.CaseStudies.CellsTemplating.csproj
+++ b/Reinforced.Lattice.CaseStudies.CellsTemplating/Reinforced.Lattice.CaseStudies.CellsTemplating.csproj
@@ -188,9 +188,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\HomeIndexViewModel.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\UserRow.cs" />
-    <Compile Include="Models\UsersTable.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\CustomerRow.cs" />
+    <Compile Include="Models\CustomersTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -255,7 +255,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>3651</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:3652/</IISUrl>
+          <IISUrl>http://localhost:3655/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
