--- a/Reinforced.Lattice.CaseStudies.Partition/Reinforced.Lattice.CaseStudies.Partition.csproj
+++ b/Reinforced.Lattice.CaseStudies.Partition/Reinforced.Lattice.CaseStudies.Partition.csproj
@@ -53,20 +53,20 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.2\lib\net45\Reinforced.Lattice.dll</HintPath>
+    <Reference Include="Reinforced.Lattice, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.5\lib\net45\Reinforced.Lattice.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.2\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.5\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.2\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.5\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Templates.Mvc5, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.2\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Templates.Mvc5, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.5\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -183,8 +183,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\SequentialPagingController.cs" />
-    <Compile Include="Controllers\ServerPagingController.cs" />
+    <Compile Include="Controllers\SequentialPartitionController.cs" />
+    <Compile Include="Controllers\ServerPartitionController.cs" />
     <Compile Include="Data\DataService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -224,10 +224,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\ServerPartition\Index.cshtml" />
+    <Content Include="Views\SequentialPartition\Index.cshtml" />
     <Content Include="Views\Shared\Lattice_Templates_Bootstrap.cshtml" />
     <Content Include="Scripts\Reinforced.Lattice\reinforced.lattice.js.map" />
-    <Content Include="Views\ServerPaging\Index.cshtml" />
-    <Content Include="Views\SequentialPaging\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
