--- a/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
@@ -53,20 +53,20 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.11\lib\net45\Reinforced.Lattice.dll</HintPath>
+    <Reference Include="Reinforced.Lattice, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.11\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.11\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Reinforced.Lattice.Templates.Mvc5, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.11\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -187,10 +187,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Contract.cs" />
     <Compile Include="Models\HomeIndexViewModel.cs" />
-    <Compile Include="Models\User.cs" />
-    <Compile Include="Models\UserRow.cs" />
-    <Compile Include="Models\UsersTable.cs" />
+    <Compile Include="Models\ContractRow.cs" />
+    <Compile Include="Models\ContractTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
