--- a/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
@@ -53,20 +53,20 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.dll</HintPath>
+    <Reference Include="Reinforced.Lattice, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.13\lib\net45\Reinforced.Lattice.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.13\lib\net45\Reinforced.Lattice.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
+    <Reference Include="Reinforced.Lattice.Mvc5.Razor, Version=1.0.13.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.13\lib\net45\Reinforced.Lattice.Mvc5.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Reinforced.Lattice.Templates.Mvc5, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.12\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
+      <HintPath>..\packages\Reinforced.Lattice.Bundle.Mvc5.1.0.13\lib\net45\Reinforced.Lattice.Templates.Mvc5.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -183,6 +183,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MultiSelectFilterController.cs" />
     <Compile Include="Controllers\SelectFilterController.cs" />
     <Compile Include="Data\DataService.cs" />
     <Compile Include="Global.asax.cs">
@@ -192,6 +193,7 @@
     <Compile Include="Models\Contract.cs" />
     <Compile Include="Models\HomeIndexViewModel.cs" />
     <Compile Include="Models\ContractRow.cs" />
+    <Compile Include="Models\MultiSelectFilterTable.cs" />
     <Compile Include="Models\SelectFilterTable.cs" />
     <Compile Include="Models\ValueFilterTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -226,9 +228,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\SelectFilter\Index.cshtml" />
+    <Content Include="Views\MultiSelectFilter\Index.cshtml" />
     <Content Include="Views\Shared\Lattice_Templates_Bootstrap.cshtml" />
     <Content Include="Scripts\Reinforced.Lattice\reinforced.lattice.js.map" />
-    <Content Include="Views\SelectFilter\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
