casestudy + mixed filters

--- a/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
+++ b/Reinforced.Lattice.CaseStudies.Filtering/Reinforced.Lattice.CaseStudies.Filtering.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MultiSelectFilterController.cs" />
     <Compile Include="Controllers\RangetFilterController.cs" />
+    <Compile Include="Controllers\MixedFilterController.cs" />
     <Compile Include="Controllers\SelectFilterController.cs" />
     <Compile Include="Data\DataService.cs" />
     <Compile Include="Global.asax.cs">
@@ -197,6 +198,7 @@
     <Compile Include="Models\MultiSelectFilterTable.cs" />
     <Compile Include="Models\RangeFilterTable.cs" />
     <Compile Include="Models\SelectFilterTable.cs" />
+    <Compile Include="Models\MixedFilterTable.cs" />
     <Compile Include="Models\ValueFilterTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -235,6 +237,7 @@
     <Content Include="Views\Shared\Lattice_Templates_Bootstrap.cshtml" />
     <Content Include="Scripts\Reinforced.Lattice\reinforced.lattice.js.map" />
     <Content Include="Views\RangeFilter\Index.cshtml" />
+    <Content Include="Views\MixedFilter\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
